<resources>
    <string name="app_name">Simple Mathematics</string>
    <string name="versionCode">0.1</string>
    <string name="versionName">release0.1</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_addition">Addition</string>
    <string name="button_multiplication">Multiplication</string>
    <string name="button_Subtraction">Subtraction</string>
    <string name="button_Division">Division</string>


    <string name="title_activity_multiplication">Multiplication</string>
    <string name="title_activity_division">Division</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_Number1">0</string>
    <string name="add_number_2">0</string>
    <string name="add_button_add">Check</string>
    <string name="add_button_showans">Show Answer</string>
    <string name="add_button_next">Next</string>

    <string name="add_user_answer">Type here</string>
    <string name="add_result_msg"> </string>
    <string name="add_symbol">+</string>
    <string name="add_welcome_msg_1">Welcome </string>
    <string name="add_welcome_msg_2">! </string>
    <string name="add_division">÷</string>

    <string name="main_button_addition">Addition</string>
    <string name="app" />
    <string name="appName">Simple Maths</string>
    <string name="userName" />
    <string name="enterButton">Enter</string>
    <string name="userNameHint">Enter Your Name</string>
    <string name="button_division">Division</string>
    <string name="division_Number1">0.0</string>
    <string name="division_number_2">0.0</string>
    <string name="symbol_subtr">-</string>

</resources>
